src/test/deca/syntax/invalid/created/matherror/matherror6.deca
// Description :
// double virgule.
//
// Resultats :
// ## TEST LEX : OK
// ## TEST SYN : Ligne 8 : extraneous input '+' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}

{ int a = -+3;}